# chatai-fastapi-backend

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/models/: message.py  session.py
src/routers/: sessions.py
src/services/: chat_service.py
src/store/: chat_store.txt  session_store.txt
src/tests/: conftest.py
src/tests/services/: test_chat_service.py  test_chat_service2.py
