[project]
name = "chatai-fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "pydantic==2.7.3",
    "pydantic-settings==2.2.1",
    "pytest==8.2.2",
    "python-dotenv>=1.0.1",
    "setuptools>=80.9.0",
    "uvicorn==0.29.0",
]
